gccida/g3/copy_loop_body
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2246:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2253:4: error: expected ';' after expression
rtx v13; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2253:5: error: use of undeclared identifier 'v13'
rtx v13; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2255:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2255:5: error: use of undeclared identifier 'v15'; did you mean 'v14'?
rtx v15; // rax 
    ^~~
    v14
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2254:18: note: 'v14' declared here
 struct rtx_def *v14; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2256:6: error: use of undeclared identifier 'insn_map'; did you mean 'insn_data'?
rtx *insn_map; // rdx 
     ^~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2256:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'const struct insn_data []')
rtx *insn_map; // rdx 
~~~ ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2257:4: error: expected ';' after expression
rtx v17; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2257:5: error: use of undeclared identifier 'v17'; did you mean 'v14'?
rtx v17; // rsi 
    ^~~
    v14
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2254:18: note: 'v14' declared here
 struct rtx_def *v14; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2258:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2258:5: error: use of undeclared identifier 'v18'; did you mean 'v14'?
rtx v18; // rax 
    ^~~
    v14
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2254:18: note: 'v14' declared here
 struct rtx_def *v14; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2262:4: error: expected ';' after expression
rtx v22; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2262:5: error: use of undeclared identifier 'v22'
rtx v22; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2264:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2264:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2266:4: error: expected ';' after expression
rtx v26; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2266:5: error: use of undeclared identifier 'v26'
rtx v26; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2267:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/unroll.c:2267:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_loop_body/src/obj/unroll.o] Error 1
